# m5paper_esphome

./: CMakeLists.txt  README.md  example - bak.yaml  example.yaml  lvgl_test.yaml  m5paper_esphome.yaml  m5paper_test.yaml  main.yaml  paper_esphome.yaml  screen01.yaml  screen_test.yaml  touch_test.yaml
.github/workflows/: lvgl_test.yml  main.yml  screen_test.yml  touch_test.yml
boards/: m5stack_paper.json
components/bm8563/: time.py
components/gt911/: gt911.cpp  touchscreen.py
components/it8951e/: display.py  it8951.h  it8951e.cpp  it8951e.h
components/m5paper/: __init__.py  m5paper.cpp  m5paper.h
